2004-03-30 Scott Dattalo  <scott@dattalo.com>
	* numeous files throughout gpsim: The Module class now uses 
	a string type instead of a 'char *' for the module name. Also,
	the gui x and y coordinate were removed from the module class (I
	still want to remove the 'widget' member too).
	* modules/usart.cc: calls to the old gpsim api were still lingering
	around here.
	* gui/gui_src_asm.cc, gui/gui_src.h, src/processor.h: more browser
	splitting stuff.

2004-03-29  Borut Razem  <borut.razem@siol.net>
	* src/modules.cc: support of external modules on WIN32

2004-03-25 Scott Dattalo  <scott@dattalo.com>
	* gui/gui_src_asm.cc: Now we can load hex files again.

2004-03-25  Bert Driehuis <driehuis@playbeing.org>
	* extras/lcd/lcdengine.cc, extras/lcd/lcdengine.cc,
	extras/lcd/lcd.h, extras/lcd/lcdgui.cc, extras/lcd/examples/lcd.asm:
	Added support for CGRAM in the LCD module.

2004-03-25 Scott Dattalo  <scott@dattalo.com>
	* src/processor.h, src/processor.cc: Added pma_context list
	* gui/Makefile.am: Recently added .h files are now in the Makefile
	* gui/gui_src.h, gui/gui_src_asm.cc: Multiple source browsers are
	now created based on the number of pma_contexts
	* gui/gui_object.h, gui/gui_src_asm.cc, gui/gui_breadboard.cc,
	gui/gui_main.cc, gui/gui_profile.cc, gui/gui_regwin.cc,
	gui/gui_scope.cc, gui/gui_src.cc, gui/gui_src_opcode.cc,
	gui/gui_stack.cc, gui/gui_stopwatch.cc, gui/gui_symbols.cc,
	gui/gui_trace.cc, gui/gui_watch.cc: 
	The GUI_Object 'name' member has been changed from a char * to a
	private string and is now no longer directly accessed by the derived
	classes. New methods set_name() and and name() control the access.
	
2004-03-24 Scott Dattalo  <scott@dattalo.com>
	* gui/gui_src_asm.cc, gui/gui_src.h: Added BreakPointList class to handle
	the 3 lists of breakpoints. Removed duplicate code too.

2004-03-23  Borut Razem  <borut.razem@siol.net>
	* src/modules.cc: gpsim on WIN32 doesn't support modules yet
	* gui/gui_breadboard.cc: GTK+ 2.x port
