@@ -49,7 +49,8 @@ public:
     NOTIFY_INSTRUCTION,
     PROFILE_START_INSTRUCTION,
     PROFILE_STOP_INSTRUCTION,
-    MULTIWORD_INSTRUCTION
+    MULTIWORD_INSTRUCTION,
+    ASSERTION_INSTRUCTION
   };
 
   /*
