@@ -1,3 +1,11 @@
+2004-04-01 Scott Dattalo  <scott@dattalo.com>
+	* modules/resistor.cc, modules/resitor.h: Several member functions
+	in the resistor classes were declared, but not defined anywhere.
+	* src/pic-instructions.h, src/breakpoints.h, src/breakpoints.cc:
+	adding assertions to the simulator.
+	* src/processor.cc, src/processor.h, gui/gui_src_asm.cc: Source
+	browser windows can now get a unique name.
+	
 2004-03-30 Scott Dattalo  <scott@dattalo.com>
 	* numeous files throughout gpsim: The Module class now uses 
 	a string type instead of a 'char *' for the module name. Also,
